--- a/public/multiplayer.html
+++ b/public/multiplayer.html
@@ -56,5 +56,6 @@
         <div class="ship carrier-container" draggable="true"><div id="carrier-0"></div><div id="carrier-1"></div><div id="carrier-2"></div><div id="carrier-3"></div><div id="carrier-4"></div></div>
       </div>
     </div>
+    <div><a href="/index.html" class="btn splash-btn">&lt;Back</a></div>
   </body>
 </html>
