--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Battle Ships For Noah and Friends</title>
+    <title>CTI-260 Demo</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="splash-container">
-      <h1 class="splash-title">Battleship For Noah And Friends</h1>
+      <h1 class="splash-title">Hello CTI-260!</h1>
+      <h2 class="splash-title">Pod-D Demo</h2>h2>
       <div>
         <a href="/singleplayer.html" class="btn splash-btn">Single Player</a>
         <a href="/multiplayer.html" class="btn splash-btn">Multiplayer</a>
