--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
   <body>
     <div class="splash-container">
       <h1 class="splash-title">Hello CTI-260!</h1>
-      <h2 class="splash-title">Pod-D Demo</h2>h2>
+      <h2 class="splash-title2">Pod-D Demo</h2>
       <div>
-        <a href="/singleplayer.html" class="btn splash-btn">Single Player</a>
-        <a href="/multiplayer.html" class="btn splash-btn">Multiplayer</a>
+        <a href="/chat.html" class="btn splash-btn">Chat</a>
+        <a href="/eyes.html" class="btn splash-btn">eyes</a>
+        <a href="/games.html" class="btn splash-btn">Games</a>
       </div>
     </div>
 
