--- a/public/eyes.html
+++ b/public/eyes.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Silly Eyes</title>
+        <title>Eyes</title>
         <script src="/socket.io/socket.io.js"></script>
         <script src="eyes.js" charset="utf-8"></script>
         <script src="DragDropTouch.js"></script>
