--- a/public/chat.html
+++ b/public/chat.html
@@ -15,7 +15,7 @@
         <div id="content" style="width: 1000px; height: 300px; margin: 0 20px 20px 200px; border: solid 3px #0d0c0c; overflow-y: scroll"></div><br/>
         <div style="width: 1000px; height: 300px; margin: 0 20px 20px 200px; overflow-y: scroll">
           Name: <input id="name" style="width:200px"/><br/>
-          Message :<input id="field" style="width:500px; height: 100px"/><br/>
+          Message :<input id="field" style="width:500px"/><br/>
           <input id="send" type="button" value="send"/>
         </div>
     </div>
